# SAlbum

./: .gitignore  README.md  SharryKey  build.gradle  local.properties  settings.gradle
app/: .gitignore  build.gradle
lib-media-player/: CMakeLists.txt  build.gradle
lib-media-player/src/main/: AndroidManifest.xml
lib-media-player/src/main/cpp/: AbsMedia.cpp  AbsMedia.h  ConstDefine.h  JNICall.cpp  JNICall.h  MediaPacketQueue.cpp  MediaPacketQueue.h  MediaStatus.cpp  MediaStatus.h  SAudioPlayer.cpp  SAudioPlayer.h  SFFmpeg.cpp  SFFmpeg.h  SVideoPlayer.cpp  SVideoPlayer.h  native-bridge-player.cpp
lib-media-player/src/main/cpp/soundtouch/: AAFilter.h  BPMDetect.cpp  FIFOSampleBuffer.cpp  FIRFilter.h  InterpolateCubic.cpp  InterpolateCubic.h  InterpolateLinear.h  InterpolateShannon.cpp  InterpolateShannon.h  PeakFinder.cpp  RateTransposer.h  SoundTouch.cpp  TDStretch.cpp  TDStretch.h  cpu_detect.h  cpu_detect_x86.cpp  mmx_optimized.cpp  sse_optimized.cpp
lib-media-player/src/main/jniLibs/include/libavcodec/: dv_profile.h
lib-media-player/src/main/jniLibs/include/libavutil/: error.h
lib-media-player/src/main/jniLibs/include/soundtouch/: FIFOSampleBuffer.h  STTypes.h  SoundTouch.h
lib-media-player/src/main/res/raw/: video_fragment_shader.glsl  video_vertex_shader.glsl
lib-media-recorder/: CMakeLists.txt  Readme.markdown  build.gradle
lib-media-recorder/src/main/: AndroidManifest.xml
lib-media-recorder/src/main/cpp/: ConstDefine.h  JNICall.cpp  JNICall.h  OpenSLRecorder.cpp  OpenSLRecorder.h  RecordBuffer.cpp  RecordBuffer.h  native-bridge-recorder.cpp
(+828 files in other folders)
